WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273758
[WPE][DRM] wpeDisplayDRMGetDRMRenderNode() ignores non-null drmRenderNode, still returning drmDevice"
https://bugs.webkit.org/show_bug.cgi?id=273758
Summary
[WPE][DRM] wpeDisplayDRMGetDRMRenderNode() ignores non-null drmRenderNode, st...
Nikolas Zimmermann
Reported
2024-05-06 02:03:05 PDT
A missing return statement in wpeDisplayDRMGetDRMRenderNode() is guilty, which I spotted by reading the code, fix that.
Attachments
Add attachment
proposed patch, testcase, etc.
Nikolas Zimmermann
Comment 1
2024-05-06 02:04:35 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28163
EWS
Comment 2
2024-05-17 07:58:27 PDT
Committed
278910@main
(c06995ebd35c): <
https://commits.webkit.org/278910@main
> Reviewed commits have been landed. Closing PR #28163 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug