[WPE][DRM] wpeDisplayDRMGetDRMRenderNode() ignores non-null drmRenderNode, still returning drmDevice" https://bugs.webkit.org/show_bug.cgi?id=273758

Reviewed by Carlos Garcia Campos.

wpeDisplayDRMGetDRMRenderNode() is missing a return statement, and thus never
returns drmRenderNode, even if it's non-null and supposed to override the
default drmDevice - fix that.

Covered by existing tests.

* Source/WebKit/WPEPlatform/wpe/drm/WPEDisplayDRM.cpp:
(wpeDisplayDRMGetDRMRenderNode):

Canonical link: https://commits.webkit.org/278910@main